--- a/styles.css
+++ b/styles.css
@@ -136,3 +136,44 @@ h1 {
     font-weight: 900;
     font-size: 15px;
 }
+
+@media  screen and (min-width:900px) {
+    .main_div {
+        width: 450px;
+        height: 697px;
+    }
+
+    .second_div {
+        width: 354px;
+        height: 98px;
+        margin-left: 48px;
+    }
+
+    .Payment {
+        width: 354px;
+        height: 50px;
+        margin: 32px 48px 32px 48px;
+    }
+
+    .main_p {
+        width: 354px;
+        height: 78px;
+        font-size: 16px;
+        margin-left: 48px;
+    }
+
+    .Change:hover {
+        color: #766CF1;
+        cursor: pointer;
+    }
+
+    .Payment:hover {
+        background-color: #766CF1;
+        cursor: pointer;
+    }
+
+    .Cancel:hover {
+        color: #1F2E55;
+        cursor: pointer;
+    }
+}
